searchbar implementada en la interfaz

--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,17 +1,10 @@
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
-     integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
-     crossorigin=""/>
-<link rel="stylesheet" href="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.css" />
-<link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
-
-<div id="map" class="map-container">
+<div class="loading" *ngIf="!_ready"> 
+    {{"find" | translate}}
+    <div class="spinner-border text-success" role="status">
+        <span class="visually-hidden"></span>
+    </div> 
 </div>
-
-<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
-integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
-crossorigin=""></script>
-<script src="https://unpkg.com/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.js"></script>
-<script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
-
-
-
+<div id="map" class="map-container"></div>
+<div class="overlay">
+    <app-searchbar></app-searchbar>
+</div>
