--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -1,7 +1,4 @@
-<div>
-    <app-searchbar></app-searchbar>
-    <div class="container">
-        <app-map></app-map>
-        <app-details></app-details>
-    </div>
+<div class="main">
+    <app-map style="position:absolute;width:100%;height:100%"></app-map>
+    <app-details></app-details>
 </div>
