--- a/src/app/components/container/container.component.scss
+++ b/src/app/components/container/container.component.scss
@@ -1,6 +1,25 @@
 .main{
-    display: flex;
-    flex-direction: column;
-    align-items: baseline;
+    display: grid;
 }
 
+.overlaySearchBar {
+    position: absolute;
+    top: 21px;
+    left: 30px;
+    z-index: 1000;
+    background-color: transparent;
+  }
+
+.overlayDetails {
+    position: relative;
+    z-index: 1000;
+    top: 420px;
+    /*align-self: center;*/
+    justify-self: end;
+}
+
+@media only screen and (min-width: 2550px){
+    .overlayDetails {
+        top: 700px;
+    }
+}
