--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,5 +1,5 @@
 <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-    <img src="./assets/icons/circulo-flecha.png" width="16" height="16" alt="" title="">
+    <img src="./assets/icons/circulo-flecha.png" width="55" height="55" alt="" title="" class="icn">
 </button>
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
