--- a/src/app/components/searchbar/searchbar.component.scss
+++ b/src/app/components/searchbar/searchbar.component.scss
@@ -25,3 +25,9 @@
 .searchIcon{
     margin-bottom: 2px;
 }
+
+@media only screen and (min-width: 2550px){
+    .searchInput{
+        padding: 0px 40px;
+    }
+}
