theme,style,setCurrentLocation,(fail to control the circle radius)

--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,5 +1,5 @@
 <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-    <img src="./assets/icons/circulo-flecha.png" width="55" height="55" alt="" title="" class="icn">
+    <img src="./assets/icons/circle-arrow.png" width="21" height="36" alt="" title="" class="icn">
 </button>
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
@@ -8,6 +8,10 @@
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-      .....
+      <hr class="divisor">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">An item</li>
+      </ul>
     </div>
 </div>
