--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -4,4 +4,7 @@
         <span class="visually-hidden"></span>
     </div> 
 </div>
+<button class="btn locationbtn" type="button" (click)="setCurrentLocation()">
+    <img src="./assets/icons/crosshair.png" width="15" height="15" alt="" title="" class="icn">
+</button>
 <div id="map" class="map-container"></div>
