--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -1,5 +1,6 @@
 <div class="main">
     <app-searchbar class="overlaySearchBar"></app-searchbar>
     <app-map style="position:absolute;width:100%;height:100%"></app-map>
+    <app-radio-slider class="overlaySlider"></app-radio-slider>
     <app-details class="overlayDetails"></app-details>
 </div>
