--- a/src/app/components/container/container.component.scss
+++ b/src/app/components/container/container.component.scss
@@ -13,13 +13,34 @@
 .overlayDetails {
     position: relative;
     z-index: 1000;
-    top: 420px;
+    top: 255px;
     /*align-self: center;*/
     justify-self: end;
 }
 
+.overlaySlider {
+    position: relative;
+    z-index: 1000;
+    top: 505px;
+    justify-self: start;
+    margin-left: 10px;
+    margin-bottom: 10px;
+}
+
+@media only screen and (min-width: 1240px){
+    .overlayDetails {
+        top: 365px;
+    }
+}
+
+@media only screen and (min-width: 1440px){
+    .overlayDetails {
+        top: 398px;
+    }
+}
+
 @media only screen and (min-width: 2550px){
     .overlayDetails {
-        top: 700px;
+        top: 875px;
     }
 }
