--- a/src/app/components/radio-slider/radio-slider.component.scss
+++ b/src/app/components/radio-slider/radio-slider.component.scss
@@ -2,10 +2,9 @@
     border: 2px solid rgba(0,0,0,0.2);
     box-shadow: rgb(190, 190, 190) 1px 1px 3px;
     background-color: rgba(240, 248, 255, 0.653);
-    padding: -10px;
+    width: 32px;
 }
 
-mat-slider {
-    width: 100px;
-    color: #005442;
+.mat-slider-vertical{
+    right: 9.5px;
 }
