client service, mock cashiers

--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid searchbar">
   <form class="d-flex" role="search">
     <input class="searchInput" type="search" aria-label="Search" placeholder="{{'search' | translate}}">
-    <button class="btn btn-outline-success searchButton" type="submit">
+    <button class="btn searchButton" type="submit">
       <img src="./assets/icons/search.png" width="20px" height="20px" class="searchIcon">
     </button>
   </form>
