--- a/src/app/components/radio-slider/radio-slider.component.html
+++ b/src/app/components/radio-slider/radio-slider.component.html
@@ -1,6 +1,16 @@
 <div class="sliderContainer">
-    <mat-slider color="primary" vertical="true" min="100" max="1000" discrete [displayWith]="formatLabel" [(ngModel)]="radius" (input)="onRadiusChange()">
-        <input matSliderThumb>
+    <mat-slider 
+        color="primary" 
+        vertical="true" 
+        min="100" 
+        max="1000" 
+        tickInterval="1"
+        step="1"
+        aria-label="units"
+        discrete [displayWith]="formatLabel" 
+        [(ngModel)]="radius" 
+        (input)="onRadiusChange()">
+            <input matSliderThumb>
     </mat-slider>
 </div>
 
