--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -36,8 +36,8 @@
   pointer-events: auto;
   position: absolute;
   z-index: 1000;
-  top: 555px;
-  margin-left: 3%;
+  bottom: 80px;
+  margin-left: 10px;
   -webkit-tap-highlight-color: rgba(51, 181, 229, 0.4);
 }::after, ::before {
   box-sizing: border-box;
