--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -20,13 +20,12 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <img src=""  alt="Image not found" onerror="this.onerror=null;this.src='image-not-found.png';">
+                <img src=""  alt="Image not found" onerror="this.onerror=null;this.src='image-not-found.png'">
                 <hr>
                 <div class="input-group">
-                    <input type="text" class="form-control" aria-label="Dollar amount (with dot and two decimal places)">
-                    <span class="input-group-text">€</span>
-                    <span class="input-group-text">0.00</span>
+                    <input type="number" class="form-control" aria-label="Dollar amount (with dot and two decimal places)" regexInput="^[0-9]*\.[0-9]{2}$ or ^[0-9]*\.[0-9][0-9]$" [innerHTML]="cash">
                 </div>
+                <p>Min. 5.00 - Max. 3000.00</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" (click)="getQR()" data-bs-dismiss="modal">{{'deposit' | translate}}</button>
