--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,15 +1,11 @@
 <div class="container-fluid searchbar">
-  <form class="d-flex" role="search">
-    <input class="searchInput" list="datalistOptions" type="search" aria-label="Search" placeholder="{{'search' | translate}}">
+    <input matInput class="searchInput" type="search" aria-label="Search" placeholder="{{'search' | translate}}"  [formControl]="streetControl">
+    <mat-autocomplete #auto="matAutocomplete">
+      <mat-option *ngFor="let street of filteredStreets | async" [value]="street">
+        {{ street }}
+      </mat-option>
+    </mat-autocomplete>
     <button class="btn searchButton" type="submit" onclick="search()">
       <img src="./assets/icons/search.png" width="20px" height="20px" class="searchIcon">
     </button>
-  </form>
-  <datalist id="datalistOptions">
-    <option value="San Francisco">
-    <option value="New York">
-    <option value="Seattle">
-    <option value="Los Angeles">
-    <option value="Chicago">
-  </datalist>
 </div>
