--- a/src/app/components/details/details.component.scss
+++ b/src/app/components/details/details.component.scss
@@ -31,3 +31,9 @@
     --bs-bg-opacity: 1;
     background-color: rgba(0,84,66,var(--bs-bg-opacity))!important;
 }
+
+.myModal{
+    position: absolute;
+    top: 0;
+    left: 0;
+}
