--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -8,3 +8,8 @@
     <img src="./assets/icons/crosshair.png" width="15" height="15" alt="" title="" class="icn">
 </button>
 <div id="map" class="map-container"></div>
+
+<button id="launchModal" type="button" class="btn btn-primary" style="display:none" data-bs-toggle="modal" data-bs-target="#myModal" >
+    Hidden
+</button>
+<app-modal-transaction id="myModal"></app-modal-transaction>
