--- a/src/app/components/modal-transaction/modal-transaction.component.html
+++ b/src/app/components/modal-transaction/modal-transaction.component.html
@@ -1,8 +1,5 @@
 
-<button id="launchModal" type="button" class="btn btn-primary" style="display:none" data-bs-toggle="modal" data-bs-target="#myModal" >
-    Hidden
-</button>
-<div class="modal modal-centered fade myModal" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" 
+<div class="modal modal-centered fade myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" 
       *ngIf="show">
     <div class="modal-dialog" >
         <div class="modal-content">
