modal issues fix

--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -35,4 +35,4 @@
     </div>
 </div>
 
-<app-modal-transaction id="myModal" [openModal]="openModal"></app-modal-transaction>
+<app-modal-transaction></app-modal-transaction>
