--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -9,7 +9,5 @@
 </button>
 <div id="map" class="map-container"></div>
 
-<button id="launchModal" type="button" class="btn btn-primary" style="display:none" data-bs-toggle="modal" data-bs-target="#myModal" >
-    Hidden
-</button>
-<app-modal-transaction id="myModal"></app-modal-transaction>
+<app-modal-transaction></app-modal-transaction>
+
