searchbar almost finish

--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid searchbar">
-    <input matInput class="searchInput" type="search" aria-label="Search" placeholder="{{'search' | translate}}"  [formControl]="streetControl" [(ngModel)]="street">
+  <form (ngSubmit)="onSubmit()">
+    <input matInput class="searchInput" type="search" aria-label="Search" placeholder="{{'search' | translate}}"  [formControl]="streetControl" [(ngModel)]="street" name="searchInput">
     <mat-autocomplete #auto="matAutocomplete">
       <mat-option *ngFor="let street of filteredStreets | async" [value]="street">
         {{ street }}
@@ -8,4 +9,5 @@
     <button class="btn searchButton" type="submit" (click)="search()">
       <img src="./assets/icons/search.png" width="20px" height="20px" class="searchIcon">
     </button>
+  </form>
 </div>
