--- a/src/app/components/container/container.component.scss
+++ b/src/app/components/container/container.component.scss
@@ -13,9 +13,7 @@
 .overlayDetails {
     z-index: 1000;
     align-self: center;
-    justify-self: end;
-    position: absolute;
-    top: 300px;
+    position: relative;
 }
 
 .overlaySlider {
@@ -27,20 +25,8 @@
     margin-bottom: 10px;
 }
 
-@media only screen and (min-width: 1240px){
-    .overlayDetails {
-        top: 570px;
-    }
-}
-
-@media only screen and (min-width: 1440px){
-    .overlayDetails {
-        top: 570px;
-    }
-}
-
-@media only screen and (min-width: 2540px){
-    .overlayDetails {
-        top: 675px;
-    }
+.details{
+    display: flex;
+    justify-content: flex-end;
+    height: 100vh;
 }
