--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
     <div class="window">
       <div class="mb-3">
         <label class="form-label">DNI</label>
-        <input #account type="text" class="form-control">
+        <input [(ngModel)]="dni" name="dni" type="text" class="form-control">
       </div>
       <div class="mb-3">
         <label class="form-label">Password</label>
