--- a/src/app/components/container/container.component.scss
+++ b/src/app/components/container/container.component.scss
@@ -8,14 +8,17 @@
     left: 30px;
     z-index: 1000;
     background-color: transparent;
-  }
+}
 
 .overlayDetails {
     z-index: 1000;
     align-self: center;
     position: relative;
 }
-
+.overlayDetails:active{
+    border-radius: 60%;
+    background: #035e4a;
+}
 .overlaySlider {
     position: absolute;
     z-index: 1000;
