fixing client.service, some qr things

--- a/src/app/components/modal-transaction/modal-transaction.component.scss
+++ b/src/app/components/modal-transaction/modal-transaction.component.scss
@@ -12,6 +12,13 @@
   .modal-footer{
     justify-content: center;
   }
+
+  .myModalQR{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10001 !important;
+  }
   
   .QR{
     z-index: 10001 !important;
