--- a/src/app/components/modal-transaction/modal-transaction.component.html
+++ b/src/app/components/modal-transaction/modal-transaction.component.html
@@ -14,9 +14,22 @@
                 <p>Min. 5.00 - Max. 3000.00</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" (click)="getQR()" data-bs-dismiss="modal">{{'deposit' | translate}}</button>
-                <button type="button" class="btn btn-primary" (click)="getQR()" data-bs-dismiss="modal">{{'draw' | translate}}</button>
+                <button type="button" class="btn btn-primary" (click)="getQR()" data-bs-target="modalQR" data-bs-dismiss="modal">{{'deposit' | translate}}</button>
+                <button type="button" class="btn btn-primary" (click)="getQR()" data-bs-target="modalQR">{{'draw' | translate}}</button>
             </div>
         </div>
+    </div>
+</div>
+<!-- TOAST QR -->
+<div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center w-100"></div>
+<div class="toast" id="modalQR" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header">
+      <strong class="me-auto">QR</strong>
+      <small> time </small>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body">
+        <!--QR-->
+        <img [src]="qrUrl" alt="QR" class="QR" width="300" height="300">
     </div>
 </div>
