--- a/src/app/components/modal-transaction/modal-transaction.component.scss
+++ b/src/app/components/modal-transaction/modal-transaction.component.scss
@@ -13,7 +13,14 @@
     justify-content: center;
   }
 
-  .myModalQR{
+  .card{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+  }
+
+  .myCardQR{
     position: absolute;
     top: 0;
     left: 0;
@@ -21,11 +28,21 @@
   }
   
   .QR{
-    z-index: 10001 !important;
-    position: absolute;
-    top: 180px;
-    left: 450px;
     background-color: rgb(255, 255, 255);
     margin: auto;
     text-align: center;
+  }
+
+  .loading {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    height:100%;
+    position: absolute;
+    z-index:100001 !important;
+    background-color: rgba($color: #000000, $alpha: 0.5);
+    text-align: center;
+    margin:auto;
   }
