--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -1,13 +1,18 @@
-<div class="container-fluid searchbar">
-  <form (ngSubmit)="onSubmit()">
-    <input matInput class="searchInput" type="search" aria-label="Search" placeholder="{{'search' | translate}}"  [formControl]="streetControl" [(ngModel)]="street" name="searchInput">
-    <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let street of filteredStreets | async" [value]="street">
-        {{ street }}
-      </mat-option>
-    </mat-autocomplete>
-    <button class="btn searchButton" type="submit" (click)="search()">
-      <img src="./assets/icons/search.png" width="20px" height="20px" class="searchIcon">
-    </button>
-  </form>
-</div>
+<nav class="navbar fixed-top nav">
+  <div class="container-fluid">
+    <div class="searchbar">
+      <form (ngSubmit)="onSubmit()">
+        <input matInput class="searchInput" type="search" aria-label="Search" placeholder="{{'search' | translate}}"  [formControl]="streetControl" [(ngModel)]="street" name="searchInput">
+        <mat-autocomplete #auto="matAutocomplete">
+          <mat-option *ngFor="let street of filteredStreets | async" [value]="street">
+            {{ street }}
+          </mat-option>
+        </mat-autocomplete>
+        <button class="btn searchButton" type="submit" (click)="search()">
+          <img src="./assets/icons/search.png" width="20px" height="20px" class="searchIcon">
+        </button>
+      </form>
+    </div>
+    <app-details class="details"></app-details>
+  </div>
+</nav>
