--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,5 +1,5 @@
-<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" (click)="ngOnInit()">
-    <img src="./assets/icons/circle-arrow.png" width="21" height="36" alt="" title="" class="icn">
+<button class="toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" (click)="ngOnInit()">
+  <span class="navbar-toggler-icon"></span>
 </button>
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
