--- a/src/app/components/qr/qr.component.html
+++ b/src/app/components/qr/qr.component.html
@@ -1,4 +1,3 @@
-<!-- QR -->
 <!--
 <div class="loading" *ngIf="!_ready"> 
     <div class="spinner-border text-success" role="status">
@@ -7,7 +6,7 @@
 </div>
 -->
 <div class="myCardQR">
-    <mat-card id="cardQR" *ngIf="showQR">
+    <mat-card id="cardQR">
         <mat-card-header>
             <mat-card-title>QR</mat-card-title>
             <mat-card-subtitle>{{"time" | translate}}</mat-card-subtitle>
@@ -16,7 +15,7 @@
             <img mat-card-image [src]="qrUrl" alt="QR" class="QR" width="300" height="300">
         </mat-card-content>
         <mat-card-actions>
-            <button mat-button>{{"close" | translate}}</button>
+            <button mat-button routerLink="/main">{{"close" | translate}}</button>
         </mat-card-actions>
     </mat-card>
 </div>
