--- a/src/app/components/searchbar/searchbar.component.scss
+++ b/src/app/components/searchbar/searchbar.component.scss
@@ -1,8 +1,8 @@
 .searchbar{
     border-width: 2px;
-    border-radius: 30px 30px 30px 30px;
-    box-shadow: rgb(190, 190, 190) 1px 1px 3px;
-    background-color: rgba(240, 248, 255, 0.653);
+    border-radius: 10px 10px 10px 10px;
+    border-color: rgb(190, 190, 190) 1px 1px 3px;
+    background-color: rgb(255 255 255 / 59%);
 }
 
 .searchButton{
@@ -28,6 +28,19 @@
 
 .searchIcon{
     margin-bottom: 2px;
+}
+
+.details{
+    background-color: rgba(240, 248, 255, 0.653);
+}
+
+.details:active{
+    background-color: #005442;
+}
+
+.nav{
+    box-shadow: rgb(190, 190, 190) 1px 1px 3px;
+    background-color: rgba(240, 248, 255, 0.653);
 }
 
 @media only screen and (min-width: 2550px){
