--- a/src/app/components/modal-transaction/modal-transaction.component.html
+++ b/src/app/components/modal-transaction/modal-transaction.component.html
@@ -9,13 +9,14 @@
                 <img src=""  alt="Image not found" onerror="this.onerror=null;this.src='./assets/icons/image-not-found.png'" width="200px" height="200px">
                 <hr>
                 <div class="input-group">
-                    <input type="number" class="form-control" aria-label="Dollar amount (with dot and two decimal places)" regexInput="^[0-9]*\.[0-9]{2}$ or ^[0-9]*\.[0-9][0-9]$" [innerHTML]="amount">
+                    <input type="number" class="form-control" aria-label="Dollar amount (with dot and two decimal places)" regexInput="^[0-9]*\.[0-9]{2}$ or ^[0-9]*\.[0-9][0-9]$" [(ngModel)]="amount" required>
                 </div>
                 <p>Min. 5.00 - Max. 3000.00</p>
+                <p *ngIf="!isValid" style="color: red;">{{"noAmount" | translate}}</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" (click)="getQR(true)" data-bs-dismiss="modal" routerLink="/qr">{{'deposit' | translate}}</button>
-                <button type="button" class="btn btn-primary" (click)="getQR(false)" data-bs-dismiss="modal" routerLink="/qr">{{'draw' | translate}}</button>
+                <button type="button" class="btn btn-primary" (click)="doTransaction(true)" data-bs-dismiss="modal">{{'deposit' | translate}}</button>
+                <button type="button" class="btn btn-primary" (click)="doTransaction(false)" data-bs-dismiss="modal">{{'draw' | translate}}</button>
             </div>
         </div>
     </div>
