--- a/src/app/components/qr/qr.component.html
+++ b/src/app/components/qr/qr.component.html
@@ -1,10 +1,9 @@
-<!--
 <div class="loading" *ngIf="!_ready"> 
     <div class="spinner-border text-success" role="status">
         <span class="visually-hidden"></span>
     </div> 
 </div>
--->
+
 <div class="container-fluid myQR">
     <div class="header">
         <img src="./../assets/img/logoAtmira.png" alt="logo" class="logo">
@@ -17,7 +16,7 @@
     </div>
     <hr class="divisor">
     <div class="qrContainer">
-        <img [src]="qrUrl" alt="QR" class="QR" width="300" height="300">
+        <img [src]="base64Image" alt="QR" class="QR" width="300" height="300">
     </div>
     <hr class="divisor">
     <div class="botton">
