--- a/src/app/components/qr/qr.component.html
+++ b/src/app/components/qr/qr.component.html
@@ -8,7 +8,7 @@
     <div class="header">
         <img src="./../assets/img/logoAtmira.png" alt="logo" class="logo">
         <div class="time">
-            {{"time" | translate}}
+            {{ timeLeft / 1000 | number: '1.0-0' }}
         </div>
         <div class="text">
             {{"scanQR" | translate}}
