qr fix with time formatt, login translate,modal issue fix, some qr tests

--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -15,7 +15,7 @@
           <img src="" class="card-img-top" alt="imagen de cajero">
         </ng-template>
         <ng-template #notImage>
-          <img src="../../../assets/img/noDisponible.jpg"  height="250" class="card-img-top" alt="imagen no disponible">
+          <img src="./assets/icons/image-not-found.png" height="250" class="card-img-top" alt="Image not found">
         </ng-template>
         
         <div class="card-body">
