--- a/src/app/components/modal-transaction/modal-transaction.component.html
+++ b/src/app/components/modal-transaction/modal-transaction.component.html
@@ -5,8 +5,8 @@
                 <h1 class="modal-title fs-5" id="exampleModalLabel">{{"operation" | translate}}</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="close()"></button>
             </div>
-            <div class="modal-body">
-                <img src=""  alt="Image not found" onerror="this.onerror=null;this.src='./assets/icons/image-not-found.png'" width="200px" height="200px">
+            <div class="modal-body body">
+                <img src=""  alt="Image not found" onerror="this.onerror=null;this.src='./assets/icons/image-not-found.png'" width="200px" height="200px" style="margin: auto;">
                 <hr>
                 <div class="input-group">
                     <input type="number" class="form-control" aria-label="Dollar amount (with dot and two decimal places)" regexInput="^[0-9]*\.[0-9]{2}$ or ^[0-9]*\.[0-9][0-9]$" [(ngModel)]="amount" required>
@@ -15,8 +15,8 @@
                 <p *ngIf="!isValid" style="color: red;">{{"noAmount" | translate}}</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" (click)="doTransaction(true)" data-bs-dismiss="modal">{{'deposit' | translate}}</button>
-                <button type="button" class="btn btn-primary" (click)="doTransaction(false)" data-bs-dismiss="modal">{{'draw' | translate}}</button>
+                <button type="button" class="btn btn-primary"  (click)="doTransaction(true)">{{'deposit' | translate}}</button>
+                <button type="button" class="btn btn-primary"  (click)="doTransaction(false)">{{'draw' | translate}}</button>
             </div>
         </div>
     </div>
