--- a/src/app/components/qr/qr.component.html
+++ b/src/app/components/qr/qr.component.html
@@ -1,4 +1,4 @@
-<div class="loading" *ngIf="!_ready"> 
+<div class="loading" *ngIf="!this._ready"> 
     <div class="spinner-border text-success" role="status">
         <span class="visually-hidden"></span>
     </div> 
@@ -8,7 +8,7 @@
     <div class="header">
         <img src="./../assets/img/logoAtmira.png" alt="logo" class="logo">
         <div class="time">
-            {{ timeLeft / 1000 | number: '1.0-0' }}
+            {{ timer }}
         </div>
         <div class="text">
             {{"scanQR" | translate}}
@@ -16,7 +16,7 @@
     </div>
     <hr class="divisor">
     <div class="qrContainer">
-        <img [src]="base64Image" alt="QR" class="QR" width="300" height="300">
+        <qrcode *ngIf="this._ready" [qrdata]="base64QR" [width]="256" [errorCorrectionLevel]="'H'"></qrcode>
     </div>
     <hr class="divisor">
     <div class="botton">
