--- a/src/app/components/qr/qr.component.scss
+++ b/src/app/components/qr/qr.component.scss
@@ -59,7 +59,7 @@
   align-items: center;
   width:100%;
   height:100%;
-  z-index:100001 !important;
+  z-index:10001;
   background-color: rgba($color: #000000, $alpha: 0.5);
 }
 
