fix QRService, change logo

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="container">
-    <img class="img" src="../../../assets/img/logoAtmira.png">
+    <img class="img" src="../../../assets/img/" alt="logo">
   </div>
   <div class="container">
     <form class="form">
